--- a/src/main/resources/messages/validation_IT.properties
+++ b/src/main/resources/messages/validation_IT.properties
@@ -2,3 +2,5 @@ required.search_query.query=Inserire un singolo termine senza spazi
 required.search_query.type=Inserire un tipo
 required.fotografo.nome = Campo obbligatorio
 required.fotografo.cognome = Campo obbligatorio
+required.funzionario.email = Campo obbligatorio
+required.funzionario.password = Campo obbligatorio
